--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,13 @@ plugins {
     id 'java-library'
 }
 
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 allprojects {
     repositories {
         jcenter()
     }
-    apply plugin: 'java'
 }
 
 dependencies {
