--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,15 @@ allprojects {
 }
 
 dependencies {
+
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:26.0-jre'
+
+    // Json
+    implementation 'org.json:json:20180813'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
