--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,14 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:26.0-jre'
+    compile 'com.google.guava:guava:26.0-jre'
 
     // Json
-  	implementation 'com.google.code.gson:gson:2.8.5'
+  	compile 'com.google.code.gson:gson:2.8.5'
+  	
+    // 
+  	compile 'javax.servlet:servlet-api:2.5'
+  	
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
